Fix text overflow in the manager dashboard

--- a/resources/assets/src/app/pages/statistic/time/statistic.time.component.scss
+++ b/resources/assets/src/app/pages/statistic/time/statistic.time.component.scss
@@ -157,6 +157,9 @@
                 margin: 0;
                 padding: 0;
                 font-size: 10px;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                margin-right: -6px;
             }
 
             .current-task,
